fixed brand H2 spacing

--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ h2 {
 }
 
 .brands h2 {
-    margin-left: 50px;
+    text-align: center !important;
     margin-bottom: 3vh;
 }
 
